style and content updates

--- a/www/index.html
+++ b/www/index.html
@@ -67,7 +67,7 @@
                   <li><a href="#activities">Park Activities</a></li>
                   <li><a href="#contact">Contact Us</a></li>
                   <li><a href="#specials">Current Specials</a></li>
-                  <li><a href="#" class="booknow btn btn-primary btn-xs round-xl">Book Now <span class="icon fa-chevron-right"></span></a></li>
+                  <li><a target="_blank" href="https://www.big4.com.au/caravan-parks/qld/sunshine-coast/caloundra-waterfront-holiday-park/booking/search" class="booknow btn btn-primary btn-xs round-xl">Book Now <span class="icon fa-chevron-right"></span></a></li>
                 </ul>
                 <!--END RD Navbar Nav-->
               </div>
@@ -100,14 +100,16 @@
           <div class="container">
             <div class="row">
               <div class="col-sm-6">
-                <h1 class="text-bold">Big4 Caloundra</h1>
+                <h1 class="text-bold">The ultimate holiday destination in Caloundra</h1>
                 <p class="lead">For a holiday packed full of family fun, you've found the ultimate destination. Ideally situated on the water's edge of the famed Pumicestone Passage, choose accommodation from luxury cabins to the fun of camping outdoors.</p>
 <p class="lead">Come and enjoy Caloundra Big4 as it is conveniently close to Caloundra's amenities including beaches, parks and shops. It's everything you need for a refreshing family break.</p>
-<p class="lead">Call us on 1800 550 138 or <a class="btn btn-primary" href="https://www.big4.com.au/caravan-parks/qld/sunshine-coast/caloundra-waterfront-holiday-park/booking/search">Book Now</a></p>
+<p class="lead">Call us on <strong><a href="tel:1800550138">1800 550 138</a></strong> or <a class="btn btn-primary btn-xs round-xl" href="https://www.big4.com.au/caravan-parks/qld/sunshine-coast/caloundra-waterfront-holiday-park/booking/search">Book Now <span class="icon fa-chevron-right"></span></a></a></p>
+
+
               </div>
 
               <div class="col-sm-6">
-                <img src="images/index_img1.jpg" alt="" class="box-shadow">
+                <img src="content/images/activities/activities_3.jpg" alt="For a holiday packed full of family fun" class="box-shadow">
               </div>
             </div>
           </div>
@@ -242,25 +244,21 @@
         <!--End section-->
 
            <!--Start section-->
-        <section class="text-left well well-lg camping">
+        <section class="text-center well well-sm camping">
           <div class="container">
             <div class="row">
-              <div class="col-sm-6">
+              <div class="col-sm-8 col-sm-offset-2">
                 <p class="lead">We have 3 fantastic camping options from your popular creek-side campsites, our standard caravanning sites, plus our peaceful creek side sites.</p>
                 <p class="lead">We have A-Class amenities and facilities, with the cleanest of clean amenities, a family bathroom, laundry a special access bathroom, plus camp kitchens and BBQ Areas.</p>
                 <p class="lead">With new and modern facilities, caravanning and camping has never been so easy.</p>
-              </div>
-
-              <div class="col-sm-6">
-                <img src="images/index_img1.jpg" alt="" class="box-shadow">
-              </div>
+              </div>             
             </div>
           </div>
         </section>
         <!--End section-->
 
         <!--Start section-->
-        <section class="well well-sm text-center text-md-left camping">
+        <section class="well well text-center text-md-left camping">
           <div class="container">
             <div class="row well">
               <article class="thumbnail thumbnail-4">
