--- a/www/index.html
+++ b/www/index.html
@@ -30,35 +30,30 @@
         <!--RD Navbar-->
         <div class="rd-navbar-wrap">
           <nav class="rd-navbar bg-white top-panel-none" data-layout="rd-navbar-fixed" data-hover-on="false" data-stick-up="false" data-sm-layout="rd-navbar-fullwidth">
-            <div class="rd-navbar-top-panel">
-              <div class="rd-navbar-inner">
-                <button data-rd-navbar-toggle=".list-inline, .fa-envelope, .fa-phone, .fa-shopping-cart" class="rd-navbar-collapse-toggle"><span></span></button><a href="mailto:#" class="fa-envelope">demomail@domail.com</a><a href="callto:#" class="fa-phone">+1 (126) 598-89-75</a>
-                <ul class="list-inline pull-right">
-                  <li><a href="#" class="fa-facebook"></a></li>
-                  <li><a href="#" class="fa-pinterest-p"></a></li>
-                  <li><a href="#" class="fa-twitter"></a></li>
-                  <li><a href="#" class="fa-google-plus"></a></li>
-                  <li><a href="#" class="fa-instagram"></a></li>
-                </ul>
-              </div>
-            </div>
+         
             <div class="rd-navbar-inner">
 
               <!--RD Navbar Panel-->
               <div class="rd-navbar-panel">
 
+               
+
                 <!--RD Navbar Toggle-->
                 <button data-rd-navbar-toggle=".rd-navbar" class="rd-navbar-toggle"><span></span></button>
                 <!--END RD Navbar Toggle-->
 
-                <!--RD Navbar Brand-->
-                <div class="rd-navbar-brand"><a href="index.html" class="brand-name"><img class="logo" src="content/images/logo.svg" alt="Big4 Caloundra"></a></div>
+                 <div class="rd-navbar-brand">
+                  <a href="index.html" class="brand-name"><img class="logo-navbar" src="content/images/logo_hor.svg" alt="Big4 Caloundra"></a>
+                </div>
+
                 <!--END RD Navbar Brand-->
               </div>
               <!--END RD Navbar Panel-->
 
               <div class="rd-navbar-nav-wrap">
 
+                <!--RD Navbar Brand-->
+               <a href="index.html" class="brand-name"><img class="logo-header" src="content/images/logo_hor.svg" alt="Big4 Caloundra"></a>
 
                 <!--RD Navbar Nav-->
                 <ul class="rd-navbar-nav">
@@ -81,8 +76,11 @@
          <div class="rd-parallax">
             <div data-speed="0.6" data-type="media" data-url="content/images/hero-1.jpg" class="rd-parallax-layer"></div>
             <div data-speed="0.78" data-type="html" data-fade="true" class="well-parallax jumbotron text-center rd-parallax-layer">
+
+              <img class="logo" src="content/images/logo.svg" alt="Big4 Caloundra">
               <h1>Caloundra Waterfront Holiday Park</h1>
-              <p class="big">For a holiday packed full of family fun, you've found the ultimate destination. <br>Ideally situated on the water's edge of the famed Pumicestone Passage, <br>choose accommodation from luxury cabins to the fun of camping outdoors.</p>
+              <h2>BIG4 Caloundra Holiday Park</h2>
+
             </div>
           </div>
 
@@ -96,7 +94,7 @@
       <main class="page-content">
 
         <!--Start section-->
-        <section class="text-left well well-lg">
+        <section class="text-left well well-lg welcome">
           <div class="container">
             <div class="row">
               <div class="col-sm-6">
