latest updates april - pages rollout

--- a/www/faq.html
+++ b/www/faq.html
@@ -96,12 +96,12 @@
         </section>
         <!--End section-->
 
-         <!--Start section-->
+         <!--Start FAQ section-->
         <section>
           <div class="container">
             <div class="row section-border well well-sm">
               <div class="col-xs-12">
-                <h1 class="text-bold text-center text-md-left">Some of your Questions</h1>
+                <h1 class="text-bold text-center text-md-left">The parks top questions</h1>
                 <ul class="marked-list offset-2 questions">
                   <li class="text-primary big"><a href="#q1" class="text-base">Do you have a pool?</a></li>
                   <li class="text-primary big"><a href="#q2" class="text-base">How close are you to the beach?</a></li>
@@ -116,12 +116,14 @@
                 </ul>
               </div>
             </div>
+
             <div id="q1" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Do you have a pool?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
             <div id="q2" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. How close are you to the beach</p>
@@ -131,42 +133,49 @@
                 </p>
               </div>
             </div>
+
             <div id="q3" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Are fires permitted?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
             <div id="q4" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Do you have internet access?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
             <div id="q5" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Do you have a playground?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
              <div id="q6" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Do you have a dump point?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
              <div id="q7" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Are you pet friendly?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
              <div id="q8" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. Do you have a camp kitchen?</p>
                 <p class="h6 letter-spacing-null font-base text-base inset-1">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
               </div>
             </div>
+
              <div id="q9" class="row section-border well">
               <div class="col-xs-12">
                 <p class="lead font-secondary text-darker-clr">Q. What if we won't be there to check-in before the reception closes?</p>
