--- a/www/specials.html
+++ b/www/specials.html
@@ -66,7 +66,7 @@
                 </ul>
 
                 <img class="logo-big4" src="content/images/logoBig4.svg" height="20" alt="Big4 Caloundra"></a>
-                
+
                 <!--END RD Navbar Nav-->
               </div>
             </div>
@@ -110,7 +110,7 @@
               </div>
 
               <div class="col-sm-6">
-                <img src="content/images/activities/activities_3.jpg" alt="For a holiday packed full of family fun" class="box-shadow">
+                <img src="content/images/hero-1.jpg" alt="For a holiday packed full of family fun" class="box-shadow">
               </div>
             </div>
           </div>
@@ -182,7 +182,8 @@
                 height="450"
                 frameborder="0" style="border:0"
                 src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA1BjDpxNVulLdfNe9dnayagz8DVJrfD0s
-                  &q=Caloundra+Waterfront,Holiday+Park+Queensland+Australia&zoom=15" allowfullscreen>
+                &q=Caloundra+Waterfront,Holiday+Park+Queensland+Australia
+                &zoom=15" allowfullscreen>
               </iframe>
               
               </div>
