--- a/relaunch/index.html
+++ b/relaunch/index.html
@@ -5,7 +5,7 @@
   <title>VA ReLAUNCH</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="/favicon.ico">
-  <link href="/css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body class='page home'>
   <!-- <div class="artwork" id="artwork1"></div>
@@ -16,7 +16,7 @@
 <div class="artwork" id="artwork3"></div>
 <!-- <div class="artwork" id="artwork4"></div> -->
 <!--   <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.4/dist/vivus.min.js" integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8=" crossorigin="anonymous"></script> -->
-  <script type="text/javascript" src="/scripts/vivus.js"></script>
-  <script type="text/javascript" src="/scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/vivus.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
