--- a/relaunch/test2/index.html
+++ b/relaunch/test2/index.html
@@ -8,12 +8,16 @@
   <link href="/css/main.css" rel="stylesheet">
 </head>
 <body class='page home'>
-  <div class="artwork" id="artwork0" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork1" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork2" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork3" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork4" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork5" data-path-type="sync" data-duration="2000"></div>
+  <!-- <div class="artwork" id="artwork1"></div>
+<div class="artwork" id="artwork2"></div> -->
+
+<div class="artwork" id="artwork1"></div>
+<div class="artwork" id="artwork2"></div>
+<div class="artwork" id="artwork3"></div>
+<div class="artwork" id="artwork4"></div>
+<div class="artwork" id="artwork5"></div>
+<div class="artwork" id="artwork6"></div>
+<!-- <div class="artwork" id="artwork4"></div> -->
 <!--   <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.4/dist/vivus.min.js" integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8=" crossorigin="anonymous"></script> -->
   <script type="text/javascript" src="/scripts/vivus.js"></script>
   <script type="text/javascript" src="/scripts/main.js"></script>
