--- a/relaunch/index.html
+++ b/relaunch/index.html
@@ -8,12 +8,20 @@
   <link href="/css/main.css" rel="stylesheet">
 </head>
 <body class='page home'>
-  <div class="artwork" id="artwork0" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork1" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork2" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork3" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork4" data-path-type="sync" data-duration="2000"></div>
-<div class="artwork" id="artwork5" data-path-type="sync" data-duration="2000"></div>
+  <object class="artwork" id="artwork0" data-duration="2000" type="image/svg+xml" data="images/artwork0.svg"></object>
+<object class="artwork" id="artwork1" type="image/svg+xml" data="images/artwork1.svg"></object>
+<object class="artwork" id="artwork2" type="image/svg+xml" data="images/artwork2.svg"></object>
+<object class="artwork" id="artwork3" type="image/svg+xml" data="images/artwork3.svg"></object>
+<object class="artwork" id="artwork4" type="image/svg+xml" data="images/artwork4.svg"></object>
+<object class="artwork" id="artwork5" type="image/svg+xml" data="images/artwork5.svg"></object>
+<object class="artwork" id="artwork6" type="image/svg+xml" data="images/artwork6.svg"></object>
+<object class="artwork" id="artwork7" type="image/svg+xml" data="images/artwork7.svg"></object>
+<object class="artwork" id="artwork8" type="image/svg+xml" data="images/artwork8.svg"></object>
+<object class="artwork" id="artwork9" type="image/svg+xml" data="images/artwork9.svg"></object>
+<object class="artwork" id="artwork10" type="image/svg+xml" data="images/artwork10.svg"></object>
+<object class="artwork" id="artwork11" type="image/svg+xml" data="images/artwork11.svg"></object>
+<object class="artwork" id="artwork12" type="image/svg+xml" data="images/artwork12.svg"></object>
+<object class="artwork" id="artwork13" type="image/svg+xml" data="images/artwork13.svg"></object>
 <!--   <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.4/dist/vivus.min.js" integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8=" crossorigin="anonymous"></script> -->
   <script type="text/javascript" src="/scripts/vivus.js"></script>
   <script type="text/javascript" src="/scripts/main.js"></script>
