--- a/relaunch/index.html
+++ b/relaunch/index.html
@@ -23,7 +23,7 @@
 <object class="artwork" id="artwork12" type="image/svg+xml" data="images/artwork12.svg"></object>
 <object class="artwork" id="artwork13" type="image/svg+xml" data="images/artwork13.svg"></object>
 <!--   <script src="https://cdn.jsdelivr.net/npm/vivus@0.4.4/dist/vivus.min.js" integrity="sha256-u/d/ZywUFyU/VmJ/TjCml5Hvl0GbgEvr3BvOvBGp5P8=" crossorigin="anonymous"></script> -->
-  <script type="text/javascript" src="/scripts/vivus.js"></script>
-  <script type="text/javascript" src="/scripts/main.js"></script>
+  <script type="text/javascript" src="scripts/vivus.js"></script>
+  <script type="text/javascript" src="scripts/main.js"></script>
 </body>
 </html>
