--- a/relaunch/index.html
+++ b/relaunch/index.html
@@ -5,7 +5,7 @@
   <title>VA ReLAUNCH</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="/favicon.ico">
-  <link href="/css/main.css" rel="stylesheet">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body class='page home'>
   <object class="artwork" id="artwork0" data-duration="2000" type="image/svg+xml" data="images/artwork0.svg"></object>
